src/test/deca/codegen/invalid/while_inf.deca
// While infini

// Il doit y avoir un débordement de pile

// Date: 17.01.2022

{
    while (true){
        println ("infini");
    }
}